argocd/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 8443
  tls:
    - hosts:
        - argocd.dev.eduid.se
      secretName: tls-secret

  rules:
  - host: argocd.dev.eduid.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
